# s2e-documents

./: .gitignore  404.html  Overview.html  Overview.md  README.md  SUMMARY.md  book.toml  prepro.sh  print.html  searchindex.js  searchindex.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: action_item.md  bug_report.md
.github/workflows/: actionlint.yml  labeler.yml  mdbook.yml
General/: CodingConvention.html  CodingConvention.md  DocumentFormat.html  DocumentFormat.md  Format to write specification documents.md  How to make VS project from CMake.md  HowToCompileWithUbuntuInDocker.html  HowToCompileWithUbuntuInDocker.md  HowToCompileWithVisualStudio.html  HowToCompileWithVisualStudio.md  HowToCompileWith_OSX.html  HowToCompileWith_OSX.md  HowToDownloadNRLMSISE00library.html  HowToDownloadNRLMSISE00library.md  HowToDwnloadCSPCElibrary.html  HowToDwnloadCSPCElibrary.md  HowToVisualizeSimulationResults.md  NamingRuleForUserInterface.md  Troubleshooting.md
Specifications/Component/AOCS/: Spec_GNSSReceiver.md  Spec_RWJitter.html  Spec_RWJitter.md  Spec_STT.html  Spec_STT.md  spec_angular_velocity_observer.md  spec_attitude_observer.md  spec_force_generator.md  spec_gyro_sensor.md  spec_magnetometer.md  spec_magnetorquer.md  spec_mtq_magnetometer_interference.md  spec_reaction_wheel.md  spec_sun_sensor.md  spec_torque_generator.md
Specifications/Component/Abstract/: Spec_ComponentBase.html  Spec_ComponentBase.md  Spec_ObcCommunicationBase.html  Spec_ObcCommunicationBase.md  Spec_SensorBase.html  Spec_SensorBase.md
Specifications/Disturbance/: Spec_Disturbance.md  Spec_Disturbances.md  Spec_GGTorque.html  Spec_GGTorque.md  Spec_GeoPotential.html  Spec_GeoPotential.md  Spec_GravityGradient.md  Spec_MagDisturbance.html  Spec_MagDisturbance.md  Spec_MagneticDisturbance.md  Spec_SurfaceForce.html  Spec_SurfaceForce.md  Spec_SurfaceForce_AirDrag.html  Spec_SurfaceForce_AirDrag.md  Spec_SurfaceForce_SolarRadiation.html  Spec_SurfaceForce_SolarRadiation.md  Spec_ThirdBodyGravity.html  Spec_ThirdBodyGravity.md
Specifications/Dynamics/: Spec_Attitude.md  Spec_AttitudeDynamics.html  Spec_AttitudeDynamics.md  Spec_ControlledAttitude.html  Spec_ControlledAttitude.md  Spec_EnckeMethod.html  Spec_EnckeMethod.md  Spec_KeplerOrbit.html  Spec_KeplerOrbit.md  Spec_Orbit.html  Spec_Orbit.md  Spec_RelativeOrbit.html  Spec_RelativeOrbit.md  Spec_RelativeOrbitSabatiniStm.md  Spec_Rk4Attitude.md  Spec_Rk4Orbit.html  Spec_Rk4Orbit.md  Spec_Sgp4.html  Spec_Sgp4.md  Spec_TimeSeriesFileOrbit.md
Specifications/Environment/: Spec_Atmosphere.html  Spec_Atmosphere.md  Spec_Atomosphere.md  Spec_CelestialInformation.md  Spec_CelestialRotation.html  Spec_CelestialRotation.md  Spec_ClockGenerator.md  Spec_GeomagneticField  Spec_GeomagneticField.md  Spec_GlobalEnvironment.md  Spec_GnssSatellites_en.html  Spec_GnssSatellites_en.md  Spec_GnssSatellites_ja.md  Spec_HipparcosCatalogue_en.html  Spec_HipparcosCatalogue_en.md  Spec_HipparcosCatalogue_ja.md  Spec_LocalCelestialInformation.md  Spec_LocalEnvironment.md  Spec_MagEnvironment.html  Spec_MagEnvironment.md  Spec_MagField.md  Spec_PhysicalConstants.md  Spec_SRPEnvironment.html  Spec_SRPEnvironment.md  Spec_SimulationTime.md
Specifications/Interface/: Spec_PowerPort.html  Spec_PowerPort.md
Specifications/OverallStructure/: OverallStructure.html  OverallStructure.md
Specifications/Simulation/: Spec_GroundStation.md  Spec_InstalledComponents.md  Spec_MonteCarloSimulation.html  Spec_MonteCarloSimulation.md  Spec_SampleCase.md  Spec_SampleGroundStation.md  Spec_SampleGroundStationComponents.md  Spec_SampleSpacecraft.md  Spec_SampleSpacecraftComponents.md  Spec_SimulationCase.md  Spec_SimulationConfiguration.md  Spec_Spacecraft.md  Spec_Structure.md
Tutorials/: GettingStarted.html  GettingStarted.md  HowToAddComponents.html  HowToAddComponents.md  HowToAddControlAlgorithms.html  HowToAddControlAlgorithms.md  HowToIntegrateC2A.html  HowToIntegrateC2A.md  HowToMakeNewComponents.html  HowToMakeNewComponents.md  HowToMakeNewSimulationScenario.html  HowToMakeNewSimulationScenario.md  HowToPerformI2cHilsTest.html  HowToPerformI2cHilsTest.md  HowToPerformUartHilsTest.html  HowToPerformUartHilsTest.md  HowToSimulateMultipleSatellites.html  HowToSimulateMultipleSatellites.md  HowToUseMonteCarloSimulation.html  HowToUseMonteCarloSimulation.md  HowToUseSerialPortCommunication.md
Tutorials/SampleCodes/C2A_Integration/S2E_src/: CMakeLists.txt  User_Components.cpp  User_Components.h  User_SimBase.ini
Tutorials/SampleCodes/C2A_Integration/S2E_src/Simulation/Spacecraft/: c2a_core_sample_components.cpp  c2a_core_sample_components.h
Tutorials/SampleCodes/s2e-user/: CMakeLists.txt  CMakeSettings.json
Tutorials/SampleCodes/s2e-user/data/ini/: UserSat.ini  UserSatDisturbance.ini  UserSimBase.ini
Tutorials/SampleCodes/s2e-user/data/ini/components/: Gyro_xxx.ini
Tutorials/SampleCodes/s2e-user/data/initialize_files/: user_satellite.ini  user_satellite_local_environment.ini  user_simulation_base.ini
Tutorials/SampleCodes/s2e-user/src/: S2eUser.cpp  s2e_user.cpp
Tutorials/SampleCodes/s2e-user/src/Simulation/Case/: UserCase.cpp  UserCase.hpp
Tutorials/SampleCodes/s2e-user/src/Simulation/Spacecraft/: UserComponents.cpp  UserComponents.hpp  UserSat.hpp
Tutorials/SampleCodes/s2e-user/src/simulation/case/: user_case.cpp  user_case.hpp
Tutorials/SampleCodes/s2e-user/src/simulation/spacecraft/: user_components.cpp  user_components.hpp  user_satellite.cpp  user_satellite.hpp
Tutorials/SampleCodes/s2e_user/: CMakeLists.txt
Tutorials/SampleCodes/s2e_user/data/ini/: UserSat.ini  UserSat_LocalEnvironment.ini  UserSat_Structure.ini  User_Disturbance.ini  User_Environment.ini  User_Orbit.ini  User_PlanetSelect.ini  User_SimBase.ini
Tutorials/SampleCodes/s2e_user/data/ini/components/: Gyro_xxx.ini
Tutorials/SampleCodes/s2e_user/src/: S2E_USER.cpp
Tutorials/SampleCodes/s2e_user/src/Simulation/Case/: User_case.cpp  User_case.h
Tutorials/SampleCodes/s2e_user/src/Simulation/Spacecraft/: User_Components.cpp  User_Components.h  User_sat.cpp  User_sat.h
(+100 files in other folders)
